# convert_and_resize

./: .gitignore  Info.txt  README.md  convert_and_resizeV2_0.py  convert_and_resizeV2_0.spec  pyproject.toml
